# skate3recomp

./: .gitmodules  CMakeLists.txt
config/: skate3.example.toml
scripts/: bootstrap-linux.sh  decode_xenos_texture_dumps.py  render_static_rx2_textures.py  run-linux.sh
src/: skate3_app_common.cpp  skate3_app_common.h  skate3_simple_settings_dialog.cpp  skate3_simple_settings_dialog.h
